--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,11 +112,11 @@ a {
   -ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
   border-bottom: dotted 1px;
-  color: #968dd2;
+  color: #25abe0;
   text-decoration: none; }
   a:hover {
-    border-bottom-color: #968dd2;
-    color: #968dd2 !important; }
+    border-bottom-color: #25abe0;
+    color: #25abe0 !important; }
     a:hover strong {
       color: inherit; }
 
@@ -998,7 +998,7 @@ header p {
   text-transform: uppercase; }
 
 header.major > :last-child {
-  border-bottom: solid 3px #968dd2;
+  border-bottom: solid 3px #25abe0;
   display: inline-block;
   margin: 0 0 2em 0;
   padding: 0 0.75em 0.5em 0; }
@@ -1056,8 +1056,8 @@ textarea {
   input[type="url"]:focus,
   select:focus,
   textarea:focus {
-    border-color: #968dd2;
-    box-shadow: 0 0 0 1px #968dd2; }
+    border-color: #25abe0;
+    box-shadow: 0 0 0 1px #25abe0; }
 
 select {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='rgba(210, 215, 217, 0.75)' /%3E%3C/svg%3E");
@@ -1145,8 +1145,8 @@ input[type="radio"] {
     content: '\f00c'; }
   input[type="checkbox"]:focus + label:before,
   input[type="radio"]:focus + label:before {
-    border-color: #968dd2;
-    box-shadow: 0 0 0 1px #968dd2; }
+    border-color: #25abe0;
+    box-shadow: 0 0 0 1px #25abe0; }
 
 input[type="checkbox"] + label:before {
   border-radius: 0.375em; }
@@ -1218,11 +1218,13 @@ input[type="radio"] + label:before {
   position: relative; }
   .image img {
     border-radius: 0.375em;
-    display: block; }
+    display: block; 
+    object-fit: cover;}
   .image.left, .image.right {
     max-width: 40%; }
     .image.left img, .image.right img {
-      width: 100%; }
+      width: 100%; 
+      object-fit: cover;}
   .image.left {
     float: left;
     padding: 0 1.5em 1em 0;
@@ -1376,7 +1378,7 @@ ul.contact {
       font-family: 'Font Awesome 5 Free';
       font-weight: 400; }
     ul.contact li:before {
-      color: #968dd2;
+      color: #25abe0;
       display: inline-block;
       font-size: 1.5em;
       height: 1.125em;
@@ -1421,7 +1423,7 @@ ul.pagination {
       padding: 0 0.5em;
       text-align: center; }
       ul.pagination li > .page.active {
-        background-color: #968dd2;
+        background-color: #25abe0;
         color: #ffffff !important; }
         ul.pagination li > .page.active:hover {
           background-color: #f67878; }
@@ -1495,8 +1497,8 @@ button,
   background-color: transparent;
   border-radius: 0.375em;
   border: 0;
-  box-shadow: inset 0 0 0 2px #968dd2;
-  color: #968dd2 !important;
+  box-shadow: inset 0 0 0 2px #25abe0;
+  color: #25abe0 !important;
   cursor: pointer;
   display: inline-block;
   font-family: "Roboto Slab", serif;
@@ -1553,7 +1555,7 @@ button,
   input[type="button"].primary,
   button.primary,
   .button.primary {
-    background-color: #968dd2;
+    background-color: #25abe0;
     box-shadow: none;
     color: #ffffff !important; }
     input[type="submit"].primary:hover,
@@ -1587,10 +1589,12 @@ button,
   padding-top: 2em; }
   .mini-posts article .image {
     display: block;
-    margin: 0 0 1.5em 0; }
+    margin: 0 0 1.5em 0; 
+    object-fit: cover;}
     .mini-posts article .image img {
       display: block;
-      width: 100%; }
+      width: 100%; 
+      object-fit: cover;}
   .mini-posts article:first-child {
     border-top: 0;
     margin-top: 0;
@@ -1642,7 +1646,7 @@ button,
       text-align: center;
       width: 10em; }
       .features article .icon:before {
-        color: #968dd2;
+        color: #25abe0;
         font-size: 2.75rem;
         position: relative;
         top: 0.05em; }
@@ -1772,7 +1776,8 @@ button,
       margin: 0 0 2em 0; }
       .posts article .image img {
         display: block;
-        width: 100%; }
+        width: 100%; 
+        object-fit: cover;}
   @media screen and (min-width: 1681px) {
     .posts article:nth-child(3n + 1):before {
       display: none; }
@@ -2075,7 +2080,7 @@ button,
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  border-bottom: solid 5px #968dd2;
+  border-bottom: solid 5px #25abe0;
   padding: 6em 0 1em 0;
   position: relative; }
   #header > * {
@@ -2214,7 +2219,7 @@ button,
     font-size: 0.9em;
     padding: 0.625em 0; }
     #menu ul a:hover, #menu ul span:hover {
-      color: #968dd2; }
+      color: #25abe0; }
     #menu ul a.opener, #menu ul span.opener {
       -moz-transition: color 0.2s ease-in-out;
       -webkit-transition: color 0.2s ease-in-out;
@@ -2244,7 +2249,7 @@ button,
         position: absolute;
         right: 0; }
       #menu ul a.opener:hover:before, #menu ul span.opener:hover:before {
-        color: #968dd2; }
+        color: #25abe0; }
       #menu ul a.opener.active + ul, #menu ul span.opener.active + ul {
         display: block; }
       #menu ul a.opener.active:before, #menu ul span.opener.active:before {
